[gd_scene load_steps=3 format=3 uid="uid://dcuummwihhbg1"]

[ext_resource type="Texture2D" uid="uid://p2paum8imnpd" path="res://assets/login.png" id="1_7w51a"]
[ext_resource type="Script" path="res://nodes/scenes/Login.gd" id="1_u2xd3"]

[node name="Login" type="CanvasLayer"]
script = ExtResource("1_u2xd3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7w51a")

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.5
offset_top = -211.5
offset_right = 49.5
offset_bottom = -156.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.819608, 0.298039, 0.678431, 1)
theme_override_font_sizes/font_size = 50
text = "Login"
horizontal_alignment = 1

[node name="Error" type="Label" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.87451, 0, 0.141176, 1)
theme_override_font_sizes/font_size = 50
text = "Sign Up"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -95.0
offset_right = 275.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Email"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PassowrdLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="."]
offset_left = 488.0
offset_top = 439.0
offset_right = 589.0
offset_bottom = 482.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Login"

[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
